interesting answers with pd.Series.mask and pd.Series.where

--- a/53825922.ipynb
+++ b/53825922.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +53,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = SOF_to_df(df_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[:,'1':'5'] = df.loc[:,'1':'5'].apply(pd.to_numeric)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in [5, 4, 3, 2]:\n",
+    "    df.iloc[:,i+1][df.iloc[:, i + 1] - df.iloc[:, i] == 0] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking other solutions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = SOF_to_df(df_input)\n",
+    "df.loc[:,'1':'5'] = df.loc[:,'1':'5'].apply(pd.to_numeric)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    1\n",
+       "2    1\n",
+       "3    3\n",
+       "Name: 1, dtype: object"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    False\n",
+       "2     True\n",
+       "3    False\n",
+       "Name: 1, dtype: bool"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['1'].duplicated()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -118,13 +219,505 @@
        "3    BIRD32  BIRD  3  32   32    32     32"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SOF_to_df(df_input)"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DocID</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   DocID      0      1      2      3      4      5\n",
+       "1  False  False  False  False  False   True   True\n",
+       "2  False  False  False  False  False  False  False\n",
+       "3  False  False  False  False   True   True   True"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.apply(pd.Series.duplicated, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method mask in module pandas.core.generic:\n",
+      "\n",
+      "mask(self, cond, other=nan, inplace=False, axis=None, level=None, errors='raise', try_cast=False, raise_on_error=None) method of pandas.core.frame.DataFrame instance\n",
+      "    Return an object of same shape as self and whose corresponding\n",
+      "    entries are from self where `cond` is False and otherwise are from\n",
+      "    `other`.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    cond : boolean NDFrame, array-like, or callable\n",
+      "        Where `cond` is False, keep the original value. Where\n",
+      "        True, replace with corresponding value from `other`.\n",
+      "        If `cond` is callable, it is computed on the NDFrame and\n",
+      "        should return boolean NDFrame or array. The callable must\n",
+      "        not change input NDFrame (though pandas doesn't check it).\n",
+      "    \n",
+      "        .. versionadded:: 0.18.1\n",
+      "            A callable can be used as cond.\n",
+      "    \n",
+      "    other : scalar, NDFrame, or callable\n",
+      "        Entries where `cond` is True are replaced with\n",
+      "        corresponding value from `other`.\n",
+      "        If other is callable, it is computed on the NDFrame and\n",
+      "        should return scalar or NDFrame. The callable must not\n",
+      "        change input NDFrame (though pandas doesn't check it).\n",
+      "    \n",
+      "        .. versionadded:: 0.18.1\n",
+      "            A callable can be used as other.\n",
+      "    \n",
+      "    inplace : boolean, default False\n",
+      "        Whether to perform the operation in place on the data\n",
+      "    axis : alignment axis if needed, default None\n",
+      "    level : alignment level if needed, default None\n",
+      "    errors : str, {'raise', 'ignore'}, default 'raise'\n",
+      "        - ``raise`` : allow exceptions to be raised\n",
+      "        - ``ignore`` : suppress exceptions. On error return original object\n",
+      "    \n",
+      "        Note that currently this parameter won't affect\n",
+      "        the results and will always coerce to a suitable dtype.\n",
+      "    \n",
+      "    try_cast : boolean, default False\n",
+      "        try to cast the result back to the input type (if possible),\n",
+      "    raise_on_error : boolean, default True\n",
+      "        Whether to raise on invalid data types (e.g. trying to where on\n",
+      "        strings)\n",
+      "    \n",
+      "        .. deprecated:: 0.21.0\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    wh : same type as caller\n",
+      "    \n",
+      "    Notes\n",
+      "    -----\n",
+      "    The mask method is an application of the if-then idiom. For each\n",
+      "    element in the calling DataFrame, if ``cond`` is ``False`` the\n",
+      "    element is used; otherwise the corresponding element from the DataFrame\n",
+      "    ``other`` is used.\n",
+      "    \n",
+      "    The signature for :func:`DataFrame.where` differs from\n",
+      "    :func:`numpy.where`. Roughly ``df1.where(m, df2)`` is equivalent to\n",
+      "    ``np.where(m, df1, df2)``.\n",
+      "    \n",
+      "    For further details and examples see the ``mask`` documentation in\n",
+      "    :ref:`indexing <indexing.where_mask>`.\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> s = pd.Series(range(5))\n",
+      "    >>> s.where(s > 0)\n",
+      "    0    NaN\n",
+      "    1    1.0\n",
+      "    2    2.0\n",
+      "    3    3.0\n",
+      "    4    4.0\n",
+      "    \n",
+      "    >>> s.mask(s > 0)\n",
+      "    0    0.0\n",
+      "    1    NaN\n",
+      "    2    NaN\n",
+      "    3    NaN\n",
+      "    4    NaN\n",
+      "    \n",
+      "    >>> s.where(s > 1, 10)\n",
+      "    0    10.0\n",
+      "    1    10.0\n",
+      "    2    2.0\n",
+      "    3    3.0\n",
+      "    4    4.0\n",
+      "    \n",
+      "    >>> df = pd.DataFrame(np.arange(10).reshape(-1, 2), columns=['A', 'B'])\n",
+      "    >>> m = df % 3 == 0\n",
+      "    >>> df.where(m, -df)\n",
+      "       A  B\n",
+      "    0  0 -1\n",
+      "    1 -2  3\n",
+      "    2 -4 -5\n",
+      "    3  6 -7\n",
+      "    4 -8  9\n",
+      "    >>> df.where(m, -df) == np.where(m, df, -df)\n",
+      "          A     B\n",
+      "    0  True  True\n",
+      "    1  True  True\n",
+      "    2  True  True\n",
+      "    3  True  True\n",
+      "    4  True  True\n",
+      "    >>> df.where(m, -df) == df.mask(~m, -df)\n",
+      "          A     B\n",
+      "    0  True  True\n",
+      "    1  True  True\n",
+      "    2  True  True\n",
+      "    3  True  True\n",
+      "    4  True  True\n",
+      "    \n",
+      "    See Also\n",
+      "    --------\n",
+      "    :func:`DataFrame.where`\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(df.mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DocID</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CAT123</td>\n",
+       "      <td>CAT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DOG14567</td>\n",
+       "      <td>DOG</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14</td>\n",
+       "      <td>145</td>\n",
+       "      <td>1456</td>\n",
+       "      <td>14567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BIRD32</td>\n",
+       "      <td>BIRD</td>\n",
+       "      <td>3</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      DocID     0    1   2    3     4      5\n",
+       "1    CAT123   CAT  NaN  12  123   123    123\n",
+       "2  DOG14567   DOG  NaN  14  145  1456  14567\n",
+       "3    BIRD32  BIRD    3  32   32    32     32"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.mask(df < 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DocID</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  DocID    0    1    2    3    4    5\n",
+       "1   NaN  NaN    1  NaN  NaN  NaN  NaN\n",
+       "2   NaN  NaN    1  NaN  NaN  NaN  NaN\n",
+       "3   NaN  NaN  NaN  NaN  NaN  NaN  NaN"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.where(df <2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "so looks like mask is the opposite of where, just replace NaN in the other places"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DocID</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CAT123</td>\n",
+       "      <td>CAT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>123</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DOG14567</td>\n",
+       "      <td>DOG</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>145</td>\n",
+       "      <td>1456</td>\n",
+       "      <td>14567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BIRD32</td>\n",
+       "      <td>BIRD</td>\n",
+       "      <td>3</td>\n",
+       "      <td>32</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      DocID     0  1   2    3     4      5\n",
+       "1    CAT123   CAT  1  12  123   NaN    NaN\n",
+       "2  DOG14567   DOG  1  14  145  1456  14567\n",
+       "3    BIRD32  BIRD  3  32  NaN   NaN    NaN"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.mask(df.apply(pd.Series.duplicated, 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this solution is pretty smart"
    ]
   },
   {
